# Ninkasi-Preprocessor

./: .gitignore  .gitlab-ci.yml  COPYING.md  Makefile  Makefile.am  README.md  TODO.org  builddos.bat  configure.ac  main.c  ppcommon.c  ppcommon.h  ppconfig.h  ppdirect.c  ppdirect.h  pperror.c  pperror.h  ppexpr.c  ppexpr.h  ppmacro.c  ppmacro.h  ppmem.c  ppmem.h  pppath.c  pppath.h  ppstate.c  ppstate.h  ppstring.c  ppstring.h  pptest.c  pptest.h  pptoken.c  pptoken.h  pptypes.h  ppx.c  ppx.h  replace.bsh  test.bsh  test.txt
example/: Makefile.am  main.c  simple.c
misc/: header.txt
pkg-config/: Makefile.am  nkpp.pc.in
src/: Makefile.am  gccdefs.h  ppcommon.c  ppcommon.h  ppconfig.h  ppdirect.c  ppdirect.h  pperror.c  pperror.h  ppexpr.c  ppexpr.h  ppmacro.c  ppmacro.h  ppmem.c  ppmem.h  pppath.c  pppath.h  ppstate.c  ppstate.h  ppstring.c  ppstring.h  pptest.c  pptest.h  pptoken.c  pptoken.h  pptypes.h  ppx.c  ppx.h
test/: test4.h
