lib_LIBRARIES = libnkpp.a

libnkpp_a_SOURCES = ppcommon.c ppcommon.h ppconfig.h ppdirect.c		\
	ppdirect.h pperror.c pperror.h ppexpr.c ppexpr.h ppmacro.c		\
	ppmacro.h ppmem.c ppmem.h pppath.c pppath.h ppstate.c ppstate.h	\
	ppstring.c ppstring.h pptest.c pptest.h pptoken.c pptoken.h		\
	pptypes.h ppx.c ppx.h

libnkpp_includedir = ${includedir}/ninkasi/nkpp
libnkpp_include_HEADERS = ppx.h pptypes.h
